dbqueries, api, misc
