# backend/src/api/swagger/swagger-output.json
@@ -24,130 +24,196 @@
     },
     "/services/getAdmittedServices": {
       "get": {
-        "description": "",
-        "parameters": [],
+        "description": "Will return the admitted services tied to a specific ethereum address.",
+        "parameters": [
+          {
+            "name": "address",
+            "in": "path",
+            "description": "Ethereum address of wallet requesting list.",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {}
       }
     },
     "/services/getServiceRequests": {
       "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/services/delete": {
-      "delete": {
-        "description": "",
-        "parameters": [],
+        "description": "Will return the requested service creations tied to a specific ethereum address.",
+        "parameters": [
+          {
+            "name": "address",
+            "in": "path",
+            "description": "Ethereum address of wallet requesting list.",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {}
       }
     },
     "/services/buy": {
       "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/services/servicedone": {
-      "post": {
-        "description": "",
-        "parameters": [],
+        "description": "Will buy a given service with an ethereum address.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Ethereum address of buyer and service name.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "address": {
+                  "type": "string",
+                  "example": "0xdB055877e6c13b6A6B25aBcAA29B393777dD0a73"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "Service Name Example"
+                }
+              }
+            }
+          }
+        ],
         "responses": {}
       }
     },
     "/services/getallservices": {
       "get": {
-        "description": "",
-        "parameters": [],
+        "description": "Will return all admitted services given an ethereum address.",
+        "parameters": [
+          {
+            "name": "address",
+            "in": "path",
+            "description": "Ethereum address of wallet requesting list.",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {}
       }
     },
     "/services/requestRegisterService": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
+      "post": {
+        "description": "Will put in a new service request.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Ethereum address of buyer and service name.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "address": {
+                  "type": "string",
+                  "example": "0xdB055877e6c13b6A6B25aBcAA29B393777dD0a73"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "Service Name Example."
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Service Description Example."
+                }
+              }
+            }
           }
-        }
+        ],
+        "responses": {}
       }
     },
     "/services/admitservice": {
       "post": {
-        "description": "",
+        "description": "Will admit a service.",
         "parameters": [
           {
-            "name": "name",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "address",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "description",
-            "in": "query",
-            "type": "string"
+            "name": "body",
+            "in": "body",
+            "description": "Ethereum address of buyer and service name.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Service Name Example."
+                }
+              }
+            }
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
+        "responses": {}
       }
     },
-    "/users/register/{username}/{address}": {
+    "/users/register": {
       "post": {
         "description": "API endpoint to register a new user in the database.",
         "parameters": [
           {
-            "name": "username",
-            "in": "path",
+            "name": "body",
+            "in": "body",
+            "description": "Ethereum address of buyer and service name.",
             "required": true,
-            "type": "string"
-          },
-          {
-            "name": "address",
-            "in": "path",
-            "required": true,
-            "type": "string"
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "type": "string",
+                  "example": "Usernameeample"
+                },
+                "address": {
+                  "type": "string",
+                  "example": "0xdB055877e6c13b6A6B25aBcAA29B393777dD0a73"
+                }
+              }
+            }
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/users/delete": {
-      "delete": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
+        "responses": {}
       }
     },
     "/users/registercoach": {
       "post": {
-        "description": "",
-        "parameters": [],
+        "description": "API endpoint to register a new coach in the database.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Ethereum address of buyer and service name.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "type": "string",
+                  "example": "Usernameeample"
+                },
+                "address": {
+                  "type": "string",
+                  "example": "0xdB055877e6c13b6A6B25aBcAA29B393777dD0a73"
+                }
+              }
+            }
+          }
+        ],
         "responses": {}
       }
     },
     "/users/getusername": {
       "get": {
-        "description": "",
-        "parameters": [],
+        "description": "API endpoint to get a username given an ethereum address.",
+        "parameters": [
+          {
+            "name": "address",
+            "in": "path",
+            "description": "Ethereum address of wallet requesting.",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {}
       }
     },
